feat(follow): add following feature
